added user and php

--- a/Assignment2_BIT216/src/app/app.component.html
+++ b/Assignment2_BIT216/src/app/app.component.html
@@ -1,11 +1,6 @@
-
 <app-header></app-header>
 
 <body>
-  <app-login></app-login>
-
-
-
-
+  <app-users></app-users>
   <router-outlet></router-outlet>
 </body>
