--- a/Assignment2_BIT216/src/app/users/register/register.component.html
+++ b/Assignment2_BIT216/src/app/users/register/register.component.html
@@ -4,16 +4,15 @@
       <input type="text" placeholder="Enter Username" name="uname" required>
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
-      <label for="email"><b>Email</b></label>
-      <input type="email" placeholder="Enter Email" name="email" required>
+      <label for="email"><b>Name</b></label>
+      <input type="email" placeholder="Enter Name" name="name" required>
       <button type="submit">Register</button>
     </div>
 </form>
-  
+
       <!--button routerLink= "/tcmHome"> Test Centre Officer Login</button>
       <button routerLink= "/testerHome"> Tester Login</button>
       <button routerLink= "/patient"> Patient Login</button-->
-  
-  
-  
-  
+
+
+
