--- a/Assignment2_BIT216/src/app/users/register/register.component.css
+++ b/Assignment2_BIT216/src/app/users/register/register.component.css
@@ -1,6 +1,6 @@
 
   /* Full-width inputs */
-  input[type=text], input[type=password], input[type=email] {
+  input[type=username], input[type=password], input[type=name] {
     width: 100%;
     padding: 12px 20px;
     margin: 20px 0;
