--- a/Assignment2_BIT216/src/app/users/register/register.component.html
+++ b/Assignment2_BIT216/src/app/users/register/register.component.html
@@ -1,57 +1,18 @@
-<!--
 <form>
     <div class="container">
-<<<<<<< HEAD
-      <label for="username"><b>Username</b></label>
-      <input type="username" placeholder="Enter Username" name="username" required>
-      <label for="password"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="password" required>
-      <label for="name"><b>Name</b></label>
-      <input type="name" placeholder="Enter Name" name="name" required>
-      <button type="submit">Register</button>
-    </div>
-</form>
-
-      <utton routerLink= "/tcmHome"> Test Centre Officer Login</button>
-      <button routerLink= "/testerHome"> Tester Login</button>
-      <button routerLink= "/patient"> Patient Login</button-->
-
-
-
-        <form [formGroup]="angForm" (ngSubmit)="postdata(angForm)" autocomplete="off" >
-          <div class="form-group">
-              <label for="name">Username</label>
-              <input type="text" name="username" formControlName="username" autocomplete="off" class="form-control input-sm" placeholder="Enter Username">
-          </div>
-
-          <div class="form-group">
-            <label for="Password">Password</label>
-            <input type="password" name="password" formControlName="password"  autocomplete="off" class="form-control input-sm" placeholder="Enter Password">
-        </div>
-
-          <div class="form-group">
-              <label for="name">Name</label>
-              <input type="name" name="name" formControlName="name" autocomplete="off" class="form-control input-sm" placeholder="Enter Name">
-          </div>
-
-          <button type="submit" class="btn btn-primary" [disabled]="!angForm.valid">Registration</button>
-      </form>
-=======
       <label for="uname"><b>Username</b></label>
       <input type="text" placeholder="Enter Username" name="uname" required>
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
-      <label for="email"><b>Email</b></label>
-      <input type="email" placeholder="Enter Email" name="email" required>
+      <label for="email"><b>Name</b></label>
+      <input type="email" placeholder="Enter Name" name="name" required>
       <button type="submit">Register</button>
     </div>
 </form>
-  
+
       <!--button routerLink= "/tcmHome"> Test Centre Officer Login</button>
       <button routerLink= "/testerHome"> Tester Login</button>
       <button routerLink= "/patient"> Patient Login</button-->
-  
-  
-  
-  
->>>>>>> parent of 0076b1c... login.php and registration.php changes as per A2 requirements.
+
+
+
