--- a/Assignment2_BIT216/src/app/TestCentreManager/generateTestReport/generateTestReport.component.css
+++ b/Assignment2_BIT216/src/app/TestCentreManager/generateTestReport/generateTestReport.component.css
@@ -1,9 +1,12 @@
-:host{
-    display:block;
-    margin-top: 1rem;
-    height: 50%;
-    background-color: aliceblue;
-  }
+
+.container {
+  background-color: aliceblue;
+  width: 100%;
+  height: 80%;
+  margin: 10px;
+  border: 1px solid #555;
+  text-align: center;
+}
 
 th{
   border: 1px solid black;
@@ -25,4 +28,7 @@ th{
   position: inherit;
   top: 50%;
   margin-top: 1rem;
+  font-size: 20px;
+  width: 20%;
 }
+
