--- a/Assignment2_BIT216/src/app/TestCentreManager/generateTestReport/generateTestReport.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/generateTestReport/generateTestReport.component.html
@@ -1,37 +1,53 @@
-<mat-toolbar color = "primary">
+<!--mat-toolbar color = "primary">
   <button mat-flat-button color= "primary" routerLink= "/tcmHome">C19</button>
   <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
   <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
   <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test Kit</button>
   <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
-  <button mat-flat-button color= "warn" >Log Out</button>
-</mat-toolbar>
+</mat-toolbar-->
 
 
-  <table style="width:100%" multi = "true" *ngIf= "reports.length>0">
-  <tr>
-    <th>patientID</th>
-    <th>Patient Username</th>
-    <th>Patient Password</th>
-    <th>Patient Name</th>
-    <th>Patient Type</th>
-    <th>Patient Symptoms</th>
-  </tr>
-  <tr *ngFor= "let generate of reports">
-    <th></th>
-    <th>{{generate.patientUsername}}</th>
-    <th>{{generate.patientPassword}}</th>
-    <th>{{generate.patientName}}</th>
-    <th>{{generate.patientType}}</th>
-    <th>{{generate.patientSymptoms}}</th>
-  </tr>
+<mat-drawer-container class="container">
+	<mat-drawer color="primary" mode="side" opened>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/tcmHome">Home</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
+  </mat-drawer>
 
-</table>
-
-<p class="info-text mat-body-1" *ngIf= "reports.length == 0" > No test has been recorded yet</p>
-
-<div class="wrapper">
-  <button class="butBack" mat-raised-button color ="accent" routerLink= "/tcmHome">Back to main page</button>
-</div>
-
-
+	<mat-drawer-content>
+  
+    <table style="width:100%" multi = "true" *ngIf= "reports.length>0">
+      <tr>
+        <th>patientID</th>
+        <th>Patient Username</th>
+        <th>Patient Password</th>
+        <th>Patient Name</th>
+        <th>Patient Type</th>
+        <th>Patient Symptoms</th>
+      </tr>
+      <tr *ngFor= "let generate of reports">
+        <th></th>
+        <th>{{generate.patientUsername}}</th>
+        <th>{{generate.patientPassword}}</th>
+        <th>{{generate.patientName}}</th>
+        <th>{{generate.patientType}}</th>
+        <th>{{generate.patientSymptoms}}</th>
+      </tr>
+    
+    </table>
+    
+    <p class="info-text mat-body-1" *ngIf= "reports.length == 0" > No test has been recorded yet</p>
+    
+    <div class="wrapper">
+      <button class="butBack" mat-raised-button color ="accent" routerLink= "/tcmHome">Back to main page</button>
+    </div>
+    
+  </mat-drawer-content>
+</mat-drawer-container>
