--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/manageStockHome/manage-stock.component.css
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/manageStockHome/manage-stock.component.css
@@ -1,20 +1,12 @@
 
-.page{
-  width:100%;
-  height: 50%;
-  text-align: center;
-  background-image: url(https://images.pexels.com/photos/2341290/pexels-photo-2341290.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-}
-
-.label{
-  text-align: center;
-}
-
-mat-form-field,
-
-input{
+.container {
+    background-color: aliceblue;
     width: 100%;
-}
+    height: 80%;
+    border: 1px solid #555;
+    margin: 10px;
+    text-align: center;
+  }
 
 .btnNewKit{
     background-color: white;
@@ -27,6 +19,7 @@ input{
     text-align: center;
     font-size: 16px;
     transition-duration: 0.4s;
+    width: 20%;
 }
 
 .btnNewKit:hover{
@@ -37,7 +30,7 @@ input{
 .btnUpdKit{
     background-color: white;
     color: black;
-    border: 2px solid red;
+    border: 2px solid green;
     padding: 16px 32px;
     margin: 4px 2px;
     margin-left: 1rem;
@@ -46,10 +39,11 @@ input{
     text-align: center;
     font-size: 16px;
     transition-duration: 0.4s;
-
+    width: 20%;
 }
 
 .btnUpdKit:hover{
-    background-color: red;
+    background-color: green;
     color: white;
 }
+
