--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/manageStockHome/manage-stock.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/manageStockHome/manage-stock.component.html
@@ -1,19 +1,32 @@
-<mat-toolbar color = "primary">
+<!--mat-toolbar color = "primary">
   <button mat-flat-button color= "primary" routerLink= "/tcmHome">C19</button>
   <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
   <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
   <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
   <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
-  <button mat-flat-button color= "warn" >Log Out</button>
-</mat-toolbar>
+</mat-toolbar-->
 
-<div class="page">
-  <h3 class="label">Manage Test-Kit Stock</h3>
+<mat-drawer-container class= "container">
+  
+  <mat-drawer mode="side" opened>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/tcmHome">Home</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
+  </mat-drawer>
+  
+  <mat-drawer-content>
+      <h2>Manage Test-Kit Stock</h2>
+      <br><br>
+      <button class= "btnNewKit" mat-button color="primary" routerLink="/newKit">Add New Stock</button>
+  
+      <button class="btnUpdKit" mat-button color="primary" routerLink="/updateKit">Update Stock</button>
+  </mat-drawer-content>
 
-  <button class= "btnNewKit" mat-button color="primary" routerLink="/newKit">Add New Stock</button>
-  <button class="btnUpdKit" mat-button color="primary" routerLink="/updateKit">Update Stock</button>
-</div>
-
-
-
-
+</mat-drawer-container>
