--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/newKit/newKit.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/newKit/newKit.component.html
@@ -1,17 +1,31 @@
-<mat-toolbar color = "primary">
+<!--mat-toolbar color = "primary">
   <button mat-flat-button color= "primary" routerLink= "/tcmHome">C19</button>
   <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
   <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
   <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
   <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
-  <button mat-flat-button color= "warn" >Log Out</button>
-</mat-toolbar>
+</mat-toolbar-->
 
-    <h3>Add New Test-Kit Stock</h3>
+<mat-drawer-container class= "container">
 
-        <mat-card>
+	<mat-drawer mode="side" opened>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/tcmHome">Home</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
+  </mat-drawer>
+  
+  <mat-drawer-content>
+
+    <h2>Add New Test-Kit Stock</h2>
+    <br>
           <form (submit) = "onAddUpdateKit(updateKitForm)" #updateKitForm="ngForm">
-           <label>New Test Kit</label>
             <br>
             <mat-form-field class="kitName">
               <input
@@ -39,12 +53,13 @@
             placeholder= "Enter the number of stock">
             <mat-error *ngIf= "numStock.invalid">Please Enter Number of Stock</mat-error>
           </mat-form-field>
+          <br><br>
 
-        <button (click) = "onAddKit()" mat-raised-button color = "primary" type = "submit">Save</button>
-        <button mat-button color="accent" routerLink="/updateKit">Update Stock List</button>
-
+        <button class= "btnSave" (click) = "onAddKit()" mat-raised-button color = "primary" type = "submit">Save</button>
+        <br><br>
+        <button class= "btnUpdate" mat-flat-button color="accent" routerLink="/updateKit">Update Stock List</button>
         </form>
-      </mat-card>
 
-
-
+  </mat-drawer-content>
+  
+</mat-drawer-container>
