--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/updateKit/updateKit.component.css
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/updateKit/updateKit.component.css
@@ -1,15 +1,13 @@
-:host{
-    display:block;
-    margin-top: 1rem;
-    width: 100%;
-    height: 50%;
-    background-color: aliceblue;}
+.container {
+  background-color: aliceblue;
+  width: 100%;
+  height: 80%;
+  margin: 10px;
+  border: 1px solid #555;
+  text-align: center;
+}
 
-
-  .info-text{
-    text-align: center;
-  }
-
-  .wrapper{
-    text-align: center;
-  }
+.btnBack{
+  font-size: 20px;
+  width: 20%;
+}
