--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/updateKit/updateKit.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/updateKit/updateKit.component.html
@@ -1,31 +1,48 @@
-<mat-toolbar color = "primary">
+<!--mat-toolbar color = "primary">
   <button mat-flat-button color= "primary" routerLink= "/tcmHome">C19</button>
   <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
   <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
   <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test Kit</button>
   <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
-  <button mat-flat-button color= "warn" >Log Out</button>
-</mat-toolbar>
+</mat-toolbar-->
 
-<h3>Update Existing Test-Kit Stock</h3>
+<mat-drawer-container class= "container">
 
-<mat-accordion multi="true" *ngIf= "updateKits.length>0">
-    <mat-expansion-panel *ngFor= "let updateKits of updateKits">
-      <mat-expansion-panel-header>
-      <p><b>Test-Kit ID: </b></p>
-      </mat-expansion-panel-header>
-      <p><b>Kit Name: </b>{{updateKits.kitName}}</p>
-      <p><b>Number of Stock: </b>{{updateKits.numStock}}</p>
-      <mat-action-row>
-        <button mat-button color="primary">Edit</button>
-        <button mat-button color="warn">Delete</button>
-      </mat-action-row>
-    </mat-expansion-panel>
-  </mat-accordion>
+	<mat-drawer mode="side" opened>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/tcmHome">Home</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
+  </mat-drawer>
+  
+  <mat-drawer-content>
+    <h3>Update Existing Test-Kit Stock</h3>
 
-  <p class= "info-text mat-body-1" *ngIf= "updateKits.length == 0"> No post added yet </p>
+    <mat-accordion multi="true" *ngIf= "updateKits.length>0">
+      <mat-expansion-panel *ngFor= "let updateKits of updateKits">
+        <mat-expansion-panel-header>
+        <p><b>Test-Kit ID: </b></p>
+        </mat-expansion-panel-header>
+        <p><b>Kit Name: </b>{{updateKits.kitName}}</p>
+        <p><b>Number of Stock: </b>{{updateKits.numStock}}</p>
+        <mat-action-row>
+          <button mat-button color="primary">Edit</button>
+          <button mat-button color="warn">Delete</button>
+        </mat-action-row>
+      </mat-expansion-panel>
+    </mat-accordion>
+  
+    <p *ngIf= "updateKits.length == 0"> No post added yet </p>
+  
+    <button class="btnBack" mat-flat-button color= "accent" routerLink = "/newKit">Back to Add Stock</button>
 
-
-  <div class="wrapper">
-    <button mat-button color= "primary" routerLink = "/newKit">Back to Add Stock</button>
-  </div>
+  
+  </mat-drawer-content>
+  
+</mat-drawer-container>
