--- a/Assignment2_BIT216/src/app/TestCentreManager/registerTestCentre/reg-tc.component.css
+++ b/Assignment2_BIT216/src/app/TestCentreManager/registerTestCentre/reg-tc.component.css
@@ -1,23 +1,29 @@
-:host{
-width: 100%;
-height: 50%;
-background-color: antiquewhite;
-}
 
-mat-form-field,
-
-textarea{
+.container {
+  background-color: aliceblue;
   width: 100%;
+  height: 80%;
+  margin: 10px;
+  border: 1px solid #555;
+  text-align: center;
 }
 
 .centreName{
-  font-size: 25px;
+  font-size: 20px;
+  width: 50%;
 }
 
 .centreTel{
-  font-size: 25px;
+  font-size: 20px;
+  width: 50%;
 }
 
 .centreAdd{
-  font-size: 25px;
+  font-size: 20px;
+  width: 50%;
+}
+
+.btnRegister{
+  font-size: 20px;
+  width: 20%;
 }
