--- a/Assignment2_BIT216/src/app/header/header.component.html
+++ b/Assignment2_BIT216/src/app/header/header.component.html
@@ -1,3 +1,14 @@
-<mat-toolbar color="primary">Covid-19 Tracer
-
-</mat-toolbar>
+<mat-toolbar color = "primary">
+    <div>
+        <button mat-raised-button color= "primary" routerLink= "/home">Covid 19 Tracer</button>
+        <button mat-flat-button color= "primary" routerLink= "/tcmHome" >Test Centre Manager</button>
+        <button mat-flat-button color= "primary" routerLink= "/testerHome">Tester</button>
+        <button mat-flat-button color= "primary" routerLink= "/patient">Patient</button>
+    </div>
+    <span class="flexExpand"></span>
+    <div>
+        <button mat-stroked-button color= "accent" routerLink= "/login">Log In</button>
+        <button mat-stroked-button color= "accent" routerLink= "/register">Register</button>
+    </div>
+  </mat-toolbar>
+  <br>
