--- a/Assignment2_BIT216/src/app/patient/viewTestHistory/viewTestHistory.component.css
+++ b/Assignment2_BIT216/src/app/patient/viewTestHistory/viewTestHistory.component.css
@@ -1,7 +1,12 @@
-.page{
-  background-image: url(https://images.pexels.com/photos/2341290/pexels-photo-2341290.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-  height: 50%;
+.container {
+  background-color: aliceblue;
+  width: 100%;
+  height: 80%;
+  margin: 10px;
+  border: 1px solid #555;
+  text-align: center;
 }
+
 .info-text{
   font-style: italic;
   color: red;
