--- a/Assignment2_BIT216/src/app/tester/testerHome.component.css
+++ b/Assignment2_BIT216/src/app/tester/testerHome.component.css
@@ -1,8 +1,8 @@
-.page{
-  width:100%;
-  height:50%;
-  background-image: url(https://images.pexels.com/photos/2341290/pexels-photo-2341290.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-  font-family: cursive;
-  font-weight: bold;
-  font-size: medium;
+.container {
+  background-color: aliceblue;
+  width: 100%;
+  height: 80%;
+  margin: 10px;
+  border: 1px solid #555;
+  text-align: center;
 }
