--- a/Assignment2_BIT216/src/app/tester/testerHome.component.html
+++ b/Assignment2_BIT216/src/app/tester/testerHome.component.html
@@ -1,14 +1,25 @@
-<mat-toolbar color = "primary">
+<!--mat-toolbar color = "primary">
   <button mat-flat-button color= "primary" routerLink= "/testerHome" >C19</button>
   <button mat-flat-button color= "primary" routerLink= "/rec-newTest">Record New Test</button>
   <button mat-flat-button color= "primary" routerLink= "/update-testResult">Update Test Result</button>
-  <button mat-flat-button color= "warn" >Log Out</button>
-
-</mat-toolbar>
+</mat-toolbar-->
 
 
-<main class = "page">
-  <h1><b>Welcome Tester!</b></h1>
-</main>
+<mat-drawer-container class= "container">
 
+	<mat-drawer mode="side" opened>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/testerHome">Home</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/rec-newTest" >Record New Test</button>
+    <br>
+    <button mat-flat-button color= "primary" routerLink= "/update-testResult">Update Test Result</button>
+  </mat-drawer>
+  
+  <mat-drawer-content>
+    <h3>Welcome Tester!</h3>
+
+  </mat-drawer-content>
+  
+</mat-drawer-container>
 
