buttons and navigation
changes in button css and navigation

--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/manageStockHome/manage-stock.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/manageStockHome/manage-stock.component.html
@@ -1,24 +1,16 @@
-<!--mat-toolbar color = "primary">
-  <button mat-flat-button color= "primary" routerLink= "/tcmHome">C19</button>
-  <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
-  <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
-  <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
-  <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
-</mat-toolbar-->
 
 <mat-drawer-container class= "container">
   
   <mat-drawer mode="side" opened>
+    <button mat-stroked-button color= "primary" routerLink= "/tcmHome">Home</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/tcmHome">Home</button>
+    <button mat-stroked-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
+    <button mat-stroked-button color= "primary" routerLink= "/record-to">Record Tester</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
+    <button mat-stroked-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
-    <br>
-    <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
+    <button mat-stroked-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
   </mat-drawer>
   
   <mat-drawer-content>
