--- a/Assignment2_BIT216/src/app/TestCentreManager/generateTestReport/generateTestReport.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/generateTestReport/generateTestReport.component.html
@@ -1,24 +1,15 @@
-<!--mat-toolbar color = "primary">
-  <button mat-flat-button color= "primary" routerLink= "/tcmHome">C19</button>
-  <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
-  <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
-  <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test Kit</button>
-  <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
-</mat-toolbar-->
-
 
 <mat-drawer-container class="container">
 	<mat-drawer color="primary" mode="side" opened>
+    <button mat-stroked-button color= "primary" routerLink= "/tcmHome">Home</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/tcmHome">Home</button>
+    <button mat-stroked-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
+    <button mat-stroked-button color= "primary" routerLink= "/record-to">Record Tester</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
+    <button mat-stroked-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
-    <br>
-    <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
+    <button mat-stroked-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
   </mat-drawer>
 
 	<mat-drawer-content>
