--- a/Assignment2_BIT216/src/app/TestCentreManager/post-list/post-list.component.css
+++ b/Assignment2_BIT216/src/app/TestCentreManager/post-list/post-list.component.css
@@ -1,10 +1,7 @@
-:host{
-    display:block;
-    margin-top: 1rem;
-    width: 100;
-    height: 50%;
-    background-color: aliceblue;
-  }
+button{
+  width: 100%;
+  height: 15%;
+}
 
   .info-text{
     text-align: center;
