--- a/Assignment2_BIT216/src/app/patient/patient.component.html
+++ b/Assignment2_BIT216/src/app/patient/patient.component.html
@@ -1,19 +1,14 @@
-<!--mat-toolbar color = "primary" >
-  <button mat-flat-button color= "primary" routerLink= "/patient"> C19</button>
-  <button mat-flat-button color= "primary" routerLink= "/view-testHistory">View Testing History</button>
-</mat-toolbar-->
 
 <mat-drawer-container class= "container">
   
   <mat-drawer mode="side" opened>
+    <button mat-stroked-button color= "primary" routerLink= "/patient">Home</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/patient">Home</button>
-    <br>
-    <button mat-flat-button color= "primary" routerLink= "/view-testHistory" >View Test History</button>
+    <button mat-stroked-button color= "primary" routerLink= "/view-testHistory" >View Test History</button>
   </mat-drawer>
   
   <mat-drawer-content>
-    <h3>Welcome Patient!</h3>
+    <h2>Welcome Patient!</h2>
   </mat-drawer-content>
 
 </mat-drawer-container>
