--- a/Assignment2_BIT216/src/app/patient/viewTestHistory/viewTestHistory.component.html
+++ b/Assignment2_BIT216/src/app/patient/viewTestHistory/viewTestHistory.component.html
@@ -1,17 +1,10 @@
-<!--mat-toolbar color = "primary" >
-  <button mat-flat-button color= "primary" routerLink= "/patient"> C19</button>
-  <button mat-flat-button color= "primary" routerLink= "/view-testHistory">View Testing History</button>
-  <button mat-flat-button color= "warn" >Log Out</button>
-
-</mat-toolbar-->
 
 <mat-drawer-container class= "container">
 
 	<mat-drawer mode="side" opened>
+    <button mat-stroked-button color= "primary" routerLink= "/patient">Home</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/patient">Home</button>
-    <br>
-    <button mat-flat-button color= "primary" routerLink= "/view-testHistory" >View Test History</button>
+    <button mat-stroked-button color= "primary" routerLink= "/view-testHistory" >View Test History</button>
   </mat-drawer>
   
   <mat-drawer-content>
