--- a/Assignment2_BIT216/src/app/tester/testerHome.component.html
+++ b/Assignment2_BIT216/src/app/tester/testerHome.component.html
@@ -1,23 +1,16 @@
-<!--mat-toolbar color = "primary">
-  <button mat-flat-button color= "primary" routerLink= "/testerHome" >C19</button>
-  <button mat-flat-button color= "primary" routerLink= "/rec-newTest">Record New Test</button>
-  <button mat-flat-button color= "primary" routerLink= "/update-testResult">Update Test Result</button>
-</mat-toolbar-->
-
 
 <mat-drawer-container class= "container">
 
 	<mat-drawer mode="side" opened>
+    <button mat-stroked-button color= "primary" routerLink= "/testerHome">Home</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/testerHome">Home</button>
+    <button mat-stroked-button color= "primary" routerLink= "/rec-newTest" >Record New Test</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/rec-newTest" >Record New Test</button>
-    <br>
-    <button mat-flat-button color= "primary" routerLink= "/update-testResult">Update Test Result</button>
+    <button mat-stroked-button color= "primary" routerLink= "/update-testResult">Update Test Result</button>
   </mat-drawer>
   
   <mat-drawer-content>
-    <h3>Welcome Tester!</h3>
+    <h2>Welcome Tester!</h2>
 
   </mat-drawer-content>
   
