--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/newKit/newKit.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/newKit/newKit.component.html
@@ -15,7 +15,7 @@
   
   <mat-drawer-content>
 
-    <h2>Add New Test-Kit Stock</h2>
+    <h2>Add New Test-Kit</h2>
     <br>
           <form (submit) = "onAddUpdateKit(updateKitForm)" #updateKitForm="ngForm">
             <br>
