--- a/Assignment2_BIT216/src/app/patient/viewTestHistory/viewTestHistory.component.html
+++ b/Assignment2_BIT216/src/app/patient/viewTestHistory/viewTestHistory.component.html
@@ -13,7 +13,7 @@
   <mat-accordion  multi = "true" *ngIf= "tests.length>0">
     <mat-expansion-panel class="list" *ngFor ="let test of tests">
       <mat-expansion-panel-header>
-        <p><b>Patient: </b><i>{{test.patientName}}</i></p>
+        <p><b>Patient: {{test.patientName}}</b></p>
       </mat-expansion-panel-header>
       <p><b>Username: </b><i>{{test.patientUsername}}</i></p>
       <p><b>Password: </b><i>{{test.patientPassword}}</i></p>
@@ -21,14 +21,12 @@
       <p><b>Type: </b><i>{{test.patientType}}</i></p>
       <p><b>Symptoms: </b><i>{{test.patientSymptoms}}</i></p>
 
-
-      <mat-action-row>
-        <button mat-raised-button color ="accent" routerLink= "/patient">Back to main page</button>
-      </mat-action-row>
-
     </mat-expansion-panel>
   </mat-accordion>
+
   <p class="info-text mat-body-1" *ngIf= "tests.length == 0" > No test has been recorded yet</p>
+  <br>
+  <button class = "btnBack" mat-stroked-button color ="accent" routerLink= "/patient">Back to main page</button>
 
 </mat-drawer-content>
 </mat-drawer-container>
