--- a/Assignment2_BIT216/src/app/tester/recordNewTest/recordNewTest.component.html
+++ b/Assignment2_BIT216/src/app/tester/recordNewTest/recordNewTest.component.html
@@ -81,7 +81,7 @@
           <mat-error *ngIf= "patientSymptoms.invalid">Please enter Patient's Symptoms</mat-error>
         </mat-form-field>
     <br>
-          <button mat-flat-button color= "primary" class = "btnRegister" (click)= "onAddReg()" type= "submit">Register</button>
+          <button mat-flat-button color= "primary" class = "btnRegister" (click)= "onAddReg()" type= "submit">Record</button>
         </form>
     
   </mat-drawer-content>
