--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/manageStockHome/manage-stock.component.css
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/manageStockHome/manage-stock.component.css
@@ -6,7 +6,7 @@
   
 .container {
     background-color: aliceblue;
-    width: 100%;
+    width: auto;
     height: 80%;
     border: 1px solid #555;
     margin: 10px;
