--- a/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/updateKit/updateKit.component.html
+++ b/Assignment2_BIT216/src/app/TestCentreManager/manageKitStock/updateKit/updateKit.component.html
@@ -2,15 +2,15 @@
 <mat-drawer-container class= "container">
 
 	<mat-drawer mode="side" opened>
-    <button mat-flat-button color= "primary" routerLink= "/tcmHome">Home</button>
+    <button mat-stroked-button color= "primary" routerLink= "/tcmHome">Home</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
+    <button mat-stroked-button color= "primary" routerLink= "/reg-tc" >Register Test Centre</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/record-to">Record Tester</button>
+    <button mat-stroked-button color= "primary" routerLink= "/record-to">Record Tester</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
+    <button mat-stroked-button color= "primary" routerLink= "/manage-stock">Manage Test-Kit Stock</button>
     <br>
-    <button mat-flat-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
+    <button mat-stroked-button color= "primary" routerLink= "/generate-testReport">Generate Test Report</button>
   </mat-drawer>
   
   <mat-drawer-content>
@@ -24,17 +24,16 @@
         <p><b>Kit Name: </b>{{updateKits.kitName}}</p>
         <p><b>Number of Stock: </b>{{updateKits.numStock}}</p>
         <mat-action-row>
-          <button mat-button color="primary">Edit</button>
-          <button mat-button color="warn">Delete</button>
+          <button mat-flat-button color="primary">Edit</button>
+          <button mat-flat-button color="warn">Delete</button>
         </mat-action-row>
       </mat-expansion-panel>
     </mat-accordion>
   
-    <p *ngIf= "updateKits.length == 0"> No post added yet </p>
-  
-    <button class="btnBack" mat-flat-button color= "accent" routerLink = "/newKit">Back to Add Stock</button>
+    <p class="info-text mat-body-1" *ngIf= "updateKits.length == 0"> No stock added yet </p>
+    <br>
+    <button class = "btnAddStock" mat-stroked-button color= "accent" routerLink = "/newKit">Add New Stock</button>
 
-  
   </mat-drawer-content>
   
 </mat-drawer-container>
