--- a/Assignment2_BIT216/src/app/patient/patient.component.css
+++ b/Assignment2_BIT216/src/app/patient/patient.component.css
@@ -1,6 +1,6 @@
 .container {
   background-color: aliceblue;
-  width: 100%;
+  width: auto;
   height: 80%;
   margin: 10px;
   border: 1px solid #555;
