--- a/Assignment2_BIT216/src/app/patient/viewTestHistory/viewTestHistory.component.css
+++ b/Assignment2_BIT216/src/app/patient/viewTestHistory/viewTestHistory.component.css
@@ -1,6 +1,12 @@
+
+button{
+  width: 100%;
+  height: 15%;
+}
+
 .container {
   background-color: aliceblue;
-  width: 100%;
+  width: auto;
   height: 80%;
   margin: 10px;
   border: 1px solid #555;
@@ -14,7 +20,8 @@
   font-size: large;
 }
 
-button{
-  width: 100%;
-  height: 15%;
+.btnBack{
+  font-size: 15px;
+  width: 20%;
+  height: auto;
 }
